# coffio

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  REUSE.toml  deny.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml
benches/: data.rs  decryption.rs  encryption.rs
benches/data/: aes128gcm-sha256_01_xs.txt  aes128gcm-sha256_02_s.txt  aes128gcm-sha256_03_m.txt  aes128gcm-sha256_04_l.txt  aes128gcm-sha256_05_xl.txt  plain_02_s.txt  plain_03_m.txt  plain_04_l.txt  plain_05_xl.txt  xchacha20poly1305-blake3_01_xs.txt  xchacha20poly1305-blake3_02_s.txt  xchacha20poly1305-blake3_03_m.txt  xchacha20poly1305-blake3_04_l.txt  xchacha20poly1305-blake3_05_xl.txt
src/: canonicalization.rs  cipher_box.rs  coffio.rs  context.rs  encrypted_data.rs  encryption.rs  error.rs  ikm.rs  kdf.rs  key.rs  lib.rs  policy.rs  scheme.rs  storage.rs
src/scheme/: aes.rs  blake3.rs  sha2.rs  xchacha20poly1305.rs
