[package]
name = "coffio"
version = "0.1.0"
authors = ["Rodolphe Breard <rodolphe@what.tf>"]
edition = "2021"
description = "Abstraction layer for symmetric data encryption, primarily designed for database column encryption."
documentation = "https://docs.rs/coffio/"
readme = "README.md"
repository = "https://github.com/breard-r/libreauth"
license = "MIT OR Apache-2.0"
keywords = ["cryptography", "encryption"]
categories = ["cryptography"]

[features]
default = []
i-understand-and-accept-the-risks = []

[dependencies]
base64ct = { version = "1.6.0", default-features = false, features = ["std"] }
getrandom = { version = "0.2.12", default-features = false }
thiserror = { version = "1.0.57", default-features = false }
